--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <meta property="og:title" content="Page 21">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://website2667474.nicepage.io/Page-21.html?version=ed6ff1aa-25a1-4ac2-9297-44c50e6d2752" data-home-page-title="Page 21" class="u-body u-xl-mode" data-lang="en"> 
+  <body style="background-color:#33475b" data-home-page="https://website2667474.nicepage.io/Page-21.html?version=ed6ff1aa-25a1-4ac2-9297-44c50e6d2752" data-home-page-title="Page 21" class="u-body u-xl-mode" data-lang="en"> 
     <section class="u-align-center u-clearfix u-section-1" id="sec-90c6">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-1">Team</h2>
+        <h2 class="u-text u-text-1" style="color: white">Team</h2>
         <div class="u-border-2 u-border-grey-dark-1 u-line u-line-horizontal u-line-1"></div>
-        <p class="u-text u-text-2">The National Aeronautics and Space Administration (NASA /ˈnæsə/) is an independent agency of the US federal government responsible for the civil space program, aeronautics research, and space research.[note 1]
+        <p class="u-text u-text-2" style="color: white">The National Aeronautics and Space Administration (NASA /ˈnæsə/) is an independent agency of the US federal government responsible for the civil space program, aeronautics research, and space research.[note 1]
 
           NASA was established in 1958, succeeding the National Advisory Committee for Aeronautics (NACA), to give the US space development effort a distinctly civilian orientation, emphasizing peaceful applications in space science.[7][8][9] Since its establishment,</p>
         <div class="u-video u-video-contain u-video-1">
