--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Page 21">
     <meta property="og:type" content="website">
   </head>
-  <body style="background-color:#33475b" data-home-page="https://website2667474.nicepage.io/Page-21.html?version=ed6ff1aa-25a1-4ac2-9297-44c50e6d2752" data-home-page-title="Page 21" class="u-body u-xl-mode" data-lang="en"> 
+  <body style="background-color:#293462" data-home-page="https://website2667474.nicepage.io/Page-21.html?version=ed6ff1aa-25a1-4ac2-9297-44c50e6d2752" data-home-page-title="Page 21" class="u-body u-xl-mode" data-lang="en"> 
     <section class="u-align-center u-clearfix u-section-1" id="sec-90c6">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-1" style="color: white">Team</h2>
